corrected image path

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="image">
-                <img src="../assets/sph1.png">
+                <img src="./assets/sph1.png">
             </div>
         </div>
         </footer>
