--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         </footer>
     </div>
-    <script type="module">
+    <script>
         var urls ={
             gitProfile : "https://github.com/sahilpandith",
             linkedIn : "https://www.linkedin.com/in/pandithsahil008/",
