updated about me

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="about-me">
                 <h3 class="summary-title">About Me</h3>
-                <div class="summary-description">UI Developer with over 7 years experience of developing robust code for high-volume businesses in Web-based Applications and UI Paradigm</div>
+                <div class="summary-description">UI Developer with over 7 years experience of developing robust code for high-volume businesses in Web-based Applications.I have the motivation to take assignments independently as well as ability to contribute and be a productive team player. I am hard working, adaptable, team player and passionate to explore new technologies.</div>
                 <div class="social-profile-links">
                     <i class="devicon-github-original colored" onclick="openUrl('gitProfile')" title="Git Profile"></i>
                     <i class="devicon-linkedin-plain colored" onclick="openUrl('linkedIn')" title="LinkedIn Profile"></i>
