added css to icons

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     pandithsahil@gmail.com
                 </p>
                 <div class="social-links">
-                    <i class="devicon-github-original colored" onclick="openUrl('gitProfile')" title="Git Profile"></i>
-                    <i class="devicon-linkedin-plain colored" onclick="openUrl('linkedIn')" title="LinkedIn Profile"></i>
+                    <i class="devicon-github-original-wordmark colored" onclick="openUrl('gitProfile')" title="Git Profile"></i>
+                    <i class="devicon-linkedin-plain-wordmark" onclick="openUrl('linkedIn')" title="LinkedIn Profile"></i>
                 </div>
             </div>
             <div class="image">
