corrected links to icon

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
             playDrumGitCode: "https://github.com/sahilpandith/PlayDrum",
             canvasPainting: "https://sahilpandith.github.io/canvasPainting/",
             canvasPaintingGitCode: "https://github.com/sahilpandith/canvasPainting",
-            adminDashboard:"https://github.com/sahilpandith/Admin_Dashboard_Project",
-            adminDashboardGitCode:"https://sahilpandith.github.io/Admin_Dashboard_Project/",
+            adminDashboardGitCode:"https://github.com/sahilpandith/Admin_Dashboard_Project",
+            adminDashboard:"https://sahilpandith.github.io/Admin_Dashboard_Project/",
             rps:"https://sahilpandith.github.io/RockPaperScissor/",
             rpsGitCode:"https://github.com/sahilpandith/RockPaperScissor",
             intersectionOberver:"https://sahilpandith.github.io/intersectionObserverExample/",
